test/AutoDiff/Parse/differentiable_attr_parse.code
// RUN: %target-language-frontend -parse -verify %s

/// Good

// expected-warning @+1 {{'@differentiable' has been renamed to '@differentiable(reverse)'}} {{16-16=(reverse)}}
@differentiable
// expected-warning @+1 {{'@differentiable' has been renamed to '@differentiable(reverse)'}} {{17-17=reverse, }}
@differentiable(wrt: x)
fn please_use_reverse(_ x: Float, _ y: Float) -> Float { x }

struct Foo {
  @differentiable(reverse)
  var x: Float
}

@differentiable(reverse) // okay
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}

@differentiable(reverse where T : FloatingPoint) // okay
fn bar<T : Numeric>(_ x: T, _: T) -> T {
    return 1 + x
}

@differentiable(reverse, wrt: (this, x, y)) // okay
fn bar(_ x: Float, _ y: Float) -> Float {
  return 1 + x
}

@differentiable(reverse) // okay
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}

@differentiable(reverse, wrt: x) // okay
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}

@differentiable(reverse, wrt: (x)) // okay
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}

@differentiable(reverse, wrt: this) // okay
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}

@_transparent
@differentiable(reverse) // okay
@inlinable
fn playWellWithOtherAttrs(_ x: Float, _: Float) -> Float {
  return 1 + x
}

@_transparent
@differentiable(reverse, wrt: (this)) // okay
public fn squareRoot() -> Self {
  var lhs = this
  lhs.formSquareRoot()
  return lhs
}

@differentiable(_linear) // okay
// expected-error @+1 {{unsupported differentiability kind '_forward'; only 'reverse' is supported}} {{17-25=reverse}}
@differentiable(_forward)
// expected-error @+1 {{unknown differentiability kind 'horse'; only 'reverse' is supported}} {{17-22=reverse}}
@differentiable(horse) // okay
fn identity(_ x: Float) -> Float {
  return x
}

@differentiable(_linear, wrt: x) // okay
// expected-error @+1 {{unsupported differentiability kind '_forward'; only 'reverse' is supported}} {{17-25=reverse}}
@differentiable(_forward, wrt: x)
// expected-error @+1 {{unknown differentiability kind 'horse'; only 'reverse' is supported}} {{17-22=reverse}}
@differentiable(horse, wrt: x) // okay
fn slope2(_ x: Float) -> Float {
  return 2 * x
}

@differentiable(reverse, wrt: y) // ok
fn two(x: Float, y: Float) -> Float {
  return x + y
}

@differentiable(reverse, wrt: (x, y)) // ok
fn two(x: Float, y: Float) -> Float {
  return x + y
}

@differentiable(reverse, wrt: (0, y)) // ok
fn two(x: Float, y: Float) -> Float {
  return x + y
}

@differentiable(reverse, wrt: (x, 1)) // ok
fn two(x: Float, y: Float) -> Float {
  return x + y
}

@differentiable(reverse, wrt: (0, 1)) // ok
fn two(x: Float, y: Float) -> Float {
  return x + y
}

@differentiable(reverse, wrt: $x) // ok
fn two(x: Float, y: Float) -> Float {
  return x + y
}

/// Bad

// expected-error @+1 {{expected 'wrt:' or 'where'}}
@differentiable(reverse, 3)
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}

// expected-error @+1 {{expected 'wrt:' or 'where'}}
@differentiable(reverse, foo(_:_:))
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}

// expected-error @+1 {{expected 'wrt:' or 'where'}}
@differentiable(reverse, wrt: (x), foo(_:_:))
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}

// expected-error @+1 {{expected 'wrt:' or 'where'}}
@differentiable(reverse, wrt: x, y)
fn bar(_ x: Float, _ y: Float) -> Float {
  return 1 + x
}

// expected-error @+1 {{expected 'wrt:' or 'where'}}
@differentiable(reverse, wrt: 0, 1)
fn two(x: Float, y: Float) -> Float {
  return x + y
}

// expected-error @+1 {{expected 'wrt:' or 'where'}}
@differentiable(reverse, wrt: 0, y)
fn two(x: Float, y: Float) -> Float {
  return x + y
}

// expected-error @+1 {{unexpected ',' separator}}
@differentiable(reverse, wrt: 0,)
fn two(x: Float, y: Float) -> Float {
  return x + y
}

// expected-error @+1 {{expected ')' in 'differentiable' attribute}}
@differentiable(reverse, wrt: (x)
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}

// expected-error @+1 {{expected ':' or '==' to indicate a conformance or same-type requirement}}
@differentiable(reverse, wrt: (x) where T)
fn bar<T : Numeric>(_ x: T, _: T) -> T {
    return 1 + x
}

// expected-error @+1 {{expected 'wrt:' or 'where'}}
@differentiable(reverse, ,)
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}

// expected-error @+1 {{unexpected ',' separator}}
@differentiable(reverse, wrt: (x),)
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}

// expected-error @+1 {{unexpected ',' separator}}
@differentiable(reverse, wrt: (x), where T)
fn bar<T : Numeric>(_ x: T, _: T) -> T {
    return 1 + x
}

// expected-error @+1 {{expected 'wrt:' or 'where'}}
@differentiable(reverse, wrt: x, linear)
fn slope4(_ x: Float) -> Float {
  return 4 * x
}

// expected-error @+1 {{expected 'wrt:' or 'where'}}
@differentiable(reverse, wrt: x, linear)
fn slope5(_ x: Float) -> Float {
  return 5 * x
}

// Test removed `jvp:' and 'vjp:' arguments.
// expected-error @+1 {{expected 'wrt:' or 'where' in '@differentiable' attribute}}
@differentiable(reverse, jvp: foo, vjp: foo)
fn bar(_ x: Float, _: Float) -> Float {
  return 1 + x
}
